snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.module.sha1
a67e0c7d309af564e3db4ce8bd607c4ac2eeb566